common/force-app/main/default/objects/Investment__c/fields/Total_Investment__c.field-meta.xml
<CustomField>
    <fullName>Total_Investment__c</fullName>
    <inlineHelpText>Sum of &quot;Amount&quot; for opportinities in &quot;Closed Won&quot; state</inlineHelpText>
    <label>Total Investment</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>