common/force-app/main/default/objects/Investment__c/fields/Type_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Interest__c</fullName>
    <formula>Opportunity_Product__r.PricebookEntry.Product2.Investment_Product_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type of Interest</label>
    <type>Text</type>
</CustomField>