common/force-app/main/default/objects/Investment__c/fields/Unit_Cert_Issued__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cert_Issued__c</fullName>
    <label>Cert Issued Date</label>
    <type>Date</type>
</CustomField>