common/force-app/main/default/objects/Investment__c/fields/Validation__c.field-meta.xml
<CustomField>
    <fullName>Validation__c</fullName>
    <description>Field to check validation of Investment given that there are multiple fields created in the object and can&apos;t ID which is which.</description>
    <formula>NOT(ISBLANK( Name ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validation</label>
    <type>Checkbox</type>
</CustomField>