common/force-app/main/default/objects/Investment__c/fields/View__c.field-meta.xml
<CustomField>
    <fullName>View__c</fullName>
    <description>Hyperlink to access investment from FlexCards Component Screen Flow</description>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_390, FIND(&apos;.com&apos;, $Api.Partner_Server_URL_390) + 4)+ &apos;/&apos; + Id,&apos;Access Investment&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View</label>
    <type>Text</type>
</CustomField>