common/force-app/main/default/objects/Investment__c/validationRules/Require_Sub_Stage_On_Stage_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Sub_Stage_On_Stage_Update</fullName>
    <active>false</active>
    <description>Ensures that Sub Stage is selected when Stage is updated.</description>
    <errorConditionFormula>AND(
  ISCHANGED(Investment_Stages__c),
  ISPICKVAL(Investment_Stages__c, &quot;Closed&quot;),
  OR(
    ISPICKVAL(invSub_Status__c, &quot;&quot;),
    NOT(ISPICKVAL(invSub_Status__c, &quot;Partially Redeemed&quot;))
  )
)</errorConditionFormula>
    <errorMessage>You must select a Sub Status when the Stage is updated.</errorMessage>
</ValidationRule>