common/force-app/main/default/objects/Investment__c/listViews/adhoc.listView-meta.xml
<ListView>
    <fullName>adhoc</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Investment_Product_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Opportunity_ID__c</field>
        <operation>equals</operation>
    </filters>
    <label>Investments w/o Opps</label>
</ListView>