common/force-app/main/default/objects/Investment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Investment_Stages__c</columns>
    <columns>Investment_Status__c</columns>
    <columns>Investment_Opp_ID__c</columns>
    <columns>Account__c</columns>
    <columns>Investment_Amount__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Investment_Product_Name__c</columns>
    <columns>Opportunity_ID__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Opportunity_Product__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>