common/force-app/main/default/objects/Investment__c/listViews/Entity_Investment_Investor_User.listView-meta.xml
<ListView>
    <fullName>Entity_Investment_Investor_User</fullName>
    <columns>NAME</columns>
    <columns>Investment_Product_Name__c</columns>
    <columns>Investment_Product_Image__c</columns>
    <columns>Investment_Product_Type__c</columns>
    <columns>Investment_Date__c</columns>
    <columns>Purchased_Shares__c</columns>
    <columns>Funds_Received_FORMULA__c</columns>
    <columns>Investment_Amount_FORMULA__c</columns>
    <columns>Investment_Product_Image_FORMULA__c</columns>
    <columns>Unit_Cert_Issued__c</columns>
    <columns>Investment_Product_Name_Formula__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Person_Account__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </filters>
    <label>Entity Investment_Investor User</label>
</ListView>